tests/invalid/generic_function_argument_mismatch.wio
fn PickFirst<T>(first: T, second: T) -> T {
    return first;
}

fn Entry() -> i32 {
    let value = PickFirst(1, "oops");
    return value;
}
